[project]
name = "booking-app-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "David Mendes",email = "david.mendes@richinsight.co.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.3.0,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "pymongo (>=4.13.1,<5.0.0)",
    "motor (>=3.3.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"
pytest = "^8.4.0"

